--- a/atividade_1/atividade_1.html
+++ b/atividade_1/atividade_1.html
@@ -1,22 +1,14 @@
-<h1>Minha Página com Imagem e Link</h1>
-</body>
-<a href="">Instituto Federal do Paraná</a>
-<title>Site com Imagem e Link</title>
-<html>
-<p>Veja abaixo uma imagem e um link:</p>
-<img src ="imagens/instituto_federal.png" width ="120" height="120"><p>
-<head>
-</html>
-<body>
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site com Imagem e Link</title>
+    <h1>Minha Página com Imagem e Link</h1>
 </head>
 <body>
-    
+    <a href="">Instituto Federal do Paraná</a>
+    <p> Veja abaixo uma imagem e um link:</p>
+    <img src ="imagens/instituto_federal.png" width ="120" height="120"></p>
 </body>
 </html>
