--- a/atividade_1/atividade_1.html
+++ b/atividade_1/atividade_1.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site com Imagem e Link</title>
-    <h1>Minha Página com Imagem e Link</h1>
+    <title>Minha Primeira Página</title>
+    <h1>Bem-vindo ao meu primeiro site!</h1>
 </head>
 <body>
-    <a href="">Instituto Federal do Paraná</a>
-    <p> Veja abaixo uma imagem e um link:</p>
-    <img src ="imagens/instituto_federal.png" width ="120" height="120"></p>
+    <p>Estou aprendendo HTML de forma divertida!</p>
 </body>
 </html>
+
