--- a/atividade_2/atividade_2.html
+++ b/atividade_2/atividade_2.html
@@ -7,8 +7,8 @@
     <h1>Minha Página com Imagem e Link</h1>
 </head>
 <body>
-    <a href="">Instituto Federal do Paraná</a>
     <p> Veja abaixo uma imagem e um link:</p>
     <img src ="imagens/instituto_federal.png" width ="120" height="120"></p>
+    <a href="https://ifpr.edu.br/">Instituto Federal do Paraná</a>
 </body>
 </html>
