--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1> Bem-vindo a Atividade Avaliativa 2 de [rafael trechinski] </h1>
-        <a href=>google</a>
+        <a href="https://trechinski.github.io/Disciplina_Tecnologia_web_2025/atividade_1/atividade_1.html">atividade1</a>
+        <a href="https://trechinski.github.io/Disciplina_Tecnologia_web_2025/atividade_2/atividade_2.html">atividade2</a>
     </body>
 </html>
