--- a/atividade_2/atividade_2.html
+++ b/atividade_2/atividade_2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p> Veja abaixo uma imagem e um link:</p>
-    <img src ="imagens/instituto_federal.png" width ="120" height="120"></p>
+    <p><img src ="imagens/instituto_federal.png" width ="120" height="120"></p>
     <a href="https://ifpr.edu.br/">Instituto Federal do Paraná</a>
 </body>
 </html>
