--- a/index/index.html
+++ b/index/index.html
@@ -8,7 +8,7 @@
         <h1> Bem-vindo a Atividade Avaliativa 2 de [rafael trechinski] </h1>
         <h2> escolha uma avaliação </h2>
         <p> <a> <href="./atividade_2/atividade_1.html">veja atividade1 </a> </p> <br>
-        <p> </p><a> <href="./atividade_2/atividade_2.html">veja atividade2 </a> </p> <br>
+        <p> <a> <href="./atividade_2/atividade_2.html">veja atividade2 </a> </p> <br>
         <img src="imagens/instituto_federal.png" width="120" height="120">
     </body>
 </html>
