--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
         <p> <a href="./atividade_1/atividade_1.html">veja atividade1 </a> </p> <br>
         <p> <a href="./atividade_2/atividade_2.html">veja atividade2 </a> </p> <br>
         <img src="imagens/instituto_federal.png" width="120" height="120">
+        <h2> feito por rafael trechinski </h2>
     </body>
 </html>
